@@ -1,6 +1,4 @@
 To be addressed in 7.19.3 (planned release: January 2009)
 =========================
 
-203 - "dns cache memory leak and TTL failure after failed conn" bug #2413067
 
-204 - 
