@@ -39,6 +39,7 @@ This release includes the following bugfixes:
  o the multi_socket API and HTTP pipelining now work a lot better when combined
  o SFTP seek/resume beyond 32bit file sizes
  o fixed breakage with --with-ssl --disable-verbose
+ o TTL "leak" in the DNS cache
 
 This release includes the following known bugs:
 
@@ -50,6 +51,6 @@ advice from friends like these:
  Yang Tse, Daniel Fandrich, Jim Meyering, Christian Krause, Andreas Wurf,
  Markus Koetter, Josef Wolf, Vlad Grachov, Pawel Kierski, Igor Novoseltsev,
  Fred Machado, Ken Hirsch, Keshav Krity, Patrick Monnerat, Mark Karpeles,
- Anthony Bryan, Peter Korsgaard
+ Anthony Bryan, Peter Korsgaard, Phil Lisiecki
 
         Thanks! (and sorry if I forgot to mention someone)
